--- a/python/src/CovarianceModelImplementation_doc.i.in
+++ b/python/src/CovarianceModelImplementation_doc.i.in
@@ -139,7 +139,7 @@ Notes
 This method makes a discretization of the model on the given :class:`~openturns.Mesh`,
 :class:`~openturns.RegularGrid` or :class:`~openturns.Sample` composed of
 the vertices :math:`(\vect{t}_1, \dots, \vect{t}_{N-1})` thanks to the
-:meth:`discretize` method and returns its Cholesky factor."
+:py:meth:`discretize` method and returns its Cholesky factor."
 %enddef
 %feature("docstring") OT::CovarianceModelImplementation::discretizeAndFactorize
 OT_CovarianceModel_discretizeAndFactorize_doc
@@ -164,7 +164,7 @@ HMatrix : :class:`~openturns.HMatrix`
 
 Notes
 -----
-This method is similar to the :meth:`discretize` method. This method requires that
+This method is similar to the :py:meth:`discretize` method. This method requires that
 OpenTURNS has been compiled with the hmat library.
 The method is helpful for very large parameters (Mesh, grid, Sample)
 because it compresses data.
@@ -195,7 +195,7 @@ HMatrix : :class:`~openturns.HMatrix`
 
 Notes
 -----
-This method is similar to the :meth:`discretizeAndFactorize` method. This method requires that
+This method is similar to the :py:meth:`discretizeAndFactorize` method. This method requires that
 requires that OpenTURNS has been compiled with the hmat library.
 The method is helpful for very large parameters (Mesh, grid, Sample)
 because it compresses data.
@@ -528,7 +528,48 @@ In the context of kriging, it allows one to choose which hyperparameters are tun
 Parameters
 ----------
 active : sequence of int
-    Indices of the active parameters."
+    Indices of the active parameters.
+
+Notes
+-----
+In order to get the position of a paremeter known by its name,  we have to first call the method
+:py:meth:`getFullParameterDescription` and then call the method *find* as shown in the following
+example.
+
+Examples
+--------
+For example, we create a :class:`~openturns.MaternModel` covariance model. By default,
+only the scale and the amplitude parameters are active and will be estimated.
+We want to add the estimation of the :math:`\nu` parameter.
+
+>>> import openturns as ot
+>>> covModel = ot.MaternModel()
+
+We get the default active parameters description: we can see that the :math:`\nu` parameter is not
+included in the list.
+
+>>> covModel.getParameterDescription()
+
+We now get the active parameter. The parameter :math:`\nu`  is not in the list.
+
+>>> active = covModel.getActiveParameter()
+
+We want to search the index associated to the parameter :math:`\nu` in the full list of the
+parameter indices.
+
+>>> activeDesc = covModel.getFullParameterDescription()
+>>> index = activeDesc.find('nu')
+
+Now, we add the index of :math:`\nu` in the initial list of active parameters. We sort the active
+indices by increasing order. Then we update the list of the active parameters.
+
+>>> active = covModel.getActiveParameter()
+>>> active.add(index)
+>>> covModel.setActiveParameter(sorted(active))
+
+Check that the parameter :math:`\nu` is in the active parameters list!
+
+>>> covModel.getActiveParameter()"
 %enddef
 %feature("docstring") OT::CovarianceModelImplementation::setActiveParameter
 OT_CovarianceModel_setActiveParameter_doc
